# hypr-overview

./: .gitignore  README.md  workspace-names.example.json
ags/: run-ags-service.sh  style.scss
ags/lib/: config.ts  overviewd.ts  screenshots.ts
ags/widget/: Overview.tsx  WindowGrid.tsx  WindowThumbnail.tsx  WorkspaceStrip.tsx
native/: run-hypr-overviewd.sh
native/hypr-overviewd/: Cargo.toml
native/hypr-overviewd/src/: main.rs
systemd/: ags.service  hypr-overviewd.service
