[package]
name = "hypr-overviewd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
libc = "0.2.183"
memmap2 = "0.9.10"
rustix = { version = "1.1.4", features = ["fs", "net", "event"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wayland-client = "0.31.13"
wayland-protocols = { version = "0.32.11", features = ["client", "staging"] }
